[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/MainCamera.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/health.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/dead.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/done.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Health:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Health:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.87451, 1, 0, 1 ), Color( 0.87451, 1, 0, 0.172549 ), Color( 0.858824, 0.980392, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainCamera" type="Camera2D"]
current = true
script = ExtResource( 1 )

[node name="Health" type="Sprite" parent="."]
scale = Vector2( 6, 6 )
texture = ExtResource( 2 )

[node name="HPAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/die = SubResource( 2 )

[node name="PfeilContainer" type="Node2D" parent="."]

[node name="YouAreDead" type="ColorRect" parent="."]
visible = false
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
color = Color( 0.713726, 0.0196078, 0.0196078, 0.133333 )

[node name="Sprite" type="Sprite" parent="YouAreDead"]
position = Vector2( 200, 200 )
texture = ExtResource( 3 )

[node name="Done" type="ColorRect" parent="."]
visible = false
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
color = Color( 0.713726, 0.0196078, 0.0196078, 0.133333 )

[node name="Sprite" type="Sprite" parent="Done"]
position = Vector2( 200, 200 )
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 637.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="Tesseract1" type="TextureRect" parent="CanvasLayer/HBoxContainer/HBoxContainer2"]
margin_bottom = 64.0

[node name="Tesseract2" type="TextureRect" parent="CanvasLayer/HBoxContainer/HBoxContainer2"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 64.0

[node name="Tesseract3" type="TextureRect" parent="CanvasLayer/HBoxContainer/HBoxContainer2"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 64.0

[node name="Tesseract4" type="TextureRect" parent="CanvasLayer/HBoxContainer/HBoxContainer2"]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 64.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 64.0
size_flags_horizontal = 3
